--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="asfalto calle calle-esteOeste">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
-            y="0px" fill="#94d" style="height: 100%; width: auto; transform: rotate(-90deg); grid-column-start:5;" viewBox="0 0 1000 1000" enable-background="new 0 0 1000 1000"
+            y="0px" fill="#05F" style="height: 100%; width: auto; transform: rotate(-90deg); grid-column-start:5;" viewBox="0 0 1000 1000" enable-background="new 0 0 1000 1000"
             xml:space="preserve">
             <g>
                 <g transform="translate(0.000000,511.000000) scale(0.100000,-0.100000)">
